alignment fixed

--- a/src/style/components/page/_activity-details.scss
+++ b/src/style/components/page/_activity-details.scss
@@ -174,6 +174,9 @@
 }
 @media screen and (max-width: 767px) {
   .nav {
+    .container {
+      padding-left: 0 !important;
+    }
     h1 {
       font-size: 20px;
     }
@@ -219,5 +222,32 @@
   }
   .long-discription {
     margin-top: 30px;
+  }
+
+  .highlight {
+    .details {
+      & > div {
+        &:first-child {
+          // background-color: red;
+          position: relative;
+          ul {
+            li {
+              font-size: 15px;
+            }
+          }
+          &::after {
+            display: none;
+          }
+        }
+        &:last-child {
+          // background-color: red;
+          position: relative;
+          justify-content: start !important;
+          &::after {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
